[package]
name = "squeef"
version = "0.1.0"
edition = "2021"

[lib]
name = "squeef"
path = "src/lib/squeef.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde-inline-default = "0.2.3"
toml = "0.8.20"

